k8s/k8s-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rains-tomorrow-service
  labels:
    app: rains-tomorrow-api
spec:
  type: ClusterIP
  ports:
  - port: 8001
    protocol: TCP
    targetPort: 8000
  selector:
    app: rains-tomorrow-api
