k8s/k8s-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rains-tomorrow-ingress
spec:
  defaultBackend:
    service:
      name: rains-tomorrow-service
      port:
        number: 8001
